fixing slider text on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -32,3 +32,7 @@
   -webkit-filter: grayscale(100%); 
   filter: grayscale(100%);
 }
+
+.col-md-12 {
+  height: 100vh;
+}
